--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "responsive",
+  "name": "digital-class",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,5 +27,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.19.0"
   }
 }
